[package]
name = "RustAssignment1"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
inquire = { version = "0.7.5", features = ["date"] }
chrono = "0.4.38"
regex = "1.11.0"